--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luxin - 学習をサポートするアプリ</title>
+    <link rel="icon" type="image/png" href="assets/icon.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="header-content">
-            <div class="logo">L</div>
+            <img src="assets/icon.png" alt="Luxin" class="logo">
             <h1>Luxin</h1>
         </div>
     </header>
