--- a/privacy.html
+++ b/privacy.html
@@ -102,6 +102,7 @@
                 <a href="index.html">ホーム</a>
                 <a href="terms.html">利用規約</a>
                 <a href="privacy.html">プライバシーポリシー</a>
+                <a href="unregister.html">退会方法</a>
             </nav>
             <p>&copy; 2025 Luxin. All rights reserved.</p>
         </div>
