--- a/unregister.html
+++ b/unregister.html
@@ -59,6 +59,7 @@
             <section>
                 <h2>注意事項</h2>
                 <p>
+                    アカウント削除の手続完了後、保持期間は設けず、直ちに全てのデータを削除します。<br>
                     アカウントを削除すると、すべてのデータが永久に削除され、復元することはできません。<br>
                     削除されるデータには、以下のものが含まれます：<br>
                     ・学習記録<br>
